--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,14 +1,8 @@
-/*common css for default*/
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     text-decoration: none;
-}
-
-html {
-    overflow-x: hidden;
-    overflow-y: auto;
 }
 
 body {
@@ -49,17 +43,17 @@ img {
     align-items: center;
 }
 
-.HeaderBottom .row .navigationMenu {
+.HeaderBottom .row .navMenu {
     display: flex;
     align-items: center;
 }
 
-.HeaderBottom .row .navigationMenu ul {
+.HeaderBottom .row .navMenu ul {
     display: flex;
     margin: 0 30px;
 }
 
-.HeaderBottom .row .navigationMenu ul li a {
+.HeaderBottom .row .navMenu ul li a {
     color: #c78c06;
     padding: 12px 40px;
     font-size: 18px;
@@ -70,7 +64,6 @@ img {
 }
 
 .HeaderBottom .row .main-logo img {
-
     width: 70%;
 }
 
@@ -79,7 +72,7 @@ img {
     color: black;
 }
 
-input#fname {
+input #fname {
     border: 1px solid #000000;
     box-sizing: border-box;
     background: #FFFFFF;
@@ -88,10 +81,9 @@ input#fname {
     height: 6px;
 }
 
-input#btn {
+input #btn {
     cursor: pointer;
     font-size: 0;
-    background: url(../images/search.png) no-repeat #222;
     position: absolute;
     width: 14px;
     height: 14px;
@@ -100,12 +92,11 @@ input#btn {
     padding: 20px;
 }
 
-/*css for banner*/
 .banner {
     position: relative;
 }
 
-.bannerbox {
+.BannerBox {
     position: absolute;
     top: 59px;
     padding: 56px 0 0 20px;
@@ -115,18 +106,18 @@ input#btn {
     height: 466px;
 }
 
-.bannerbox h1 {
+.BannerBox h1 {
     font-size: 80px;
     color: white;
 }
 
-.bannerbox p {
+.BannerBox p {
     font-size: 14px;
     color: white;
     margin: 23px 0 20px 0;
 }
 
-.bannerbox h4 a {
+.BannerBox h4 a {
     background: #c78c06;
     padding: 33px 51px;
     position: absolute;
@@ -139,7 +130,6 @@ input#btn {
     display: flex;
 }
 
-/*css for aboutus section*/
 .aboutUS {
     background-color: #ffe6ac;
 }
@@ -174,7 +164,6 @@ h2 {
     margin: 20px 0;
 }
 
-/*css for services section*/
 .services .row {
     flex-wrap: wrap;
     margin-bottom: 20px;
@@ -274,7 +263,6 @@ h2 {
     font-weight: 400;
 }
 
-/*css for team section*/
 .team .row {
     background-color: #ffe6ac;
     flex-wrap: wrap;
@@ -295,11 +283,6 @@ h2 {
 
 .team-detail {
     padding: 15px 10px;
-}
-
-.team_detail h5 {
-    font-weight: 600;
-    font-size: 26px;
 }
 
 .team-detail h4 {
@@ -325,9 +308,9 @@ h2 {
     margin-bottom: 10px;
 }
 
-input#cname,
-input#email,
-textarea#message {
+input #cname,
+input #email,
+textarea #message {
     width: 100%;
     height: 40px;
     margin-bottom: 10px;
@@ -346,11 +329,11 @@ textarea#message {
     font-weight: 400;
 }
 
-textarea#message {
+textarea #message {
     height: 150px;
 }
 
-input#sbtn {
+input #submit-btn {
     cursor: pointer;
     background-color: #222;
     color: #c78c06;
